--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,7 +26,7 @@
     font-family: 'Shrikhand', sans-serif;
     font-weight: 400;
     font-size: 30px;
-    font-style: italic;
+    
 }
 
 .menu-title {
